-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
befe02aa6efeb351439112b27fc43e9866d6ea3d
ucalling qdoc.exe from the binary mingw package crashes.
Output from depends.exe:
... 00:00:11.938: GetProcAddress(0x6E940000 [c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\LIBGCC_S_DW2-1.DLL], "__register_frame_info") called from "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QT5CORE.DLL" at address 0x688814B3 and returned 0x6E9541E0. 00:00:11.954: DllMain(0x68880000, DLL_PROCESS_ATTACH, 0x0028FD24) in "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QT5CORE.DLL" returned 1 (0x1). 00:00:11.954: DllMain(0x66C00000, DLL_PROCESS_ATTACH, 0x0028FD24) in "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QT5XML.DLL" called. 00:00:11.954: GetProcAddress(0x6E940000 [c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\LIBGCC_S_DW2-1.DLL], "__register_frame_info") called from "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QT5XML.DLL" at address 0x66C014B3 and returned 0x6E9541E0. 00:00:11.985: DllMain(0x66C00000, DLL_PROCESS_ATTACH, 0x0028FD24) in "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QT5XML.DLL" returned 1 (0x1). 00:00:12.000: GetProcAddress(0x76E50000 [c:\windows\syswow64\MSVCRT.DLL], "_set_invalid_parameter_handler") called from "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QDOC.EXE" at address 0x004012C8 and returned NULL. Error: The specified procedure could not be found (127). 00:00:12.016: GetProcAddress(0x6E940000 [c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\LIBGCC_S_DW2-1.DLL], "__register_frame_info") called from "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QDOC.EXE" at address 0x00401533 and returned 0x6E9541E0. 00:00:12.032: First chance exception 0xC0000005 (Access Violation) occurred in "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QDOC.EXE" at address 0x0051D0DA. 00:00:12.032: Second chance exception 0xC0000005 (Access Violation) occurred in "c:\qt\qt5.2.0-enterprise-mingw-61\5.2.0-beta1\mingw48_32\bin\QDOC.EXE" at address 0x0051D0DA.
gdb shows following stack trace
0 load<int> qgenericatomic.h 96 0x516bee 1 QBasicAtomicInteger<int>::load qbasicatomic.h 141 0x516bee 2 QtPrivate::RefCount::ref qrefcount.h 57 0x5153bb 3 QString::QString qstring.h 778 0x5082b2 4 __static_initialization_and_destruction_0 main.cpp 91 0x491137 5 _GLOBAL__sub_I__Z18creationTimeBeforeRK9QFileInfoS1_ main.cpp 660 0x491375 6 __do_global_ctors 0x4d90da 7 ?? 0x40000060 8 ?? 0x3 9 ?? 0x5eb2f20 10 KERNEL32!BaseCleanupAppcompatCacheSupport C:\Windows\syswow64\kernel32.dll 0x76b5336a 11 ?? 0x7efde000 12 ntdll!RtlpNtSetValueKey C:\Windows\system32\ntdll.dll 0x77739f72 13 ?? 0x7efde000 14 ntdll!RtlpNtSetValueKey C:\Windows\system32\ntdll.dll 0x77739f45 15 WinMainCRTStartup 0x4014e0 16 ?? 0x7efde000 17 ??
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
For Gerrit Dashboard: QTBUG-34172 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
68594,2 | Fix crash in qdoc startup | stable | qt/qtbase | Status: MERGED | +2 | 0 |